--- a/website/static/css/sidebar.css
+++ b/website/static/css/sidebar.css
@@ -17,3 +17,9 @@
     margin-bottom: 15px;
     font-weight: 400;
 }
+
+@media only screen and (max-width: 1023px) {
+    .separateOnPageNav .docsNavContainer {
+        padding-right: 0;
+    }
+}
